--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head> <title> cgi company</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta content="HTML,CSS,JavaScript">
+        <meta charset="utf-8">
+        <meta content="width=device-width,initial-scale=1.0">
+        
         
         <link rel="stylesheet" href="t.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
