--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head> <title> cgi company</title>
-        <meta charset="utf-8">
-        <meta content="width=device-width,initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width"/>
         
         
         <link rel="stylesheet" href="t.css">
