--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head> <title> cgi company</title>
         <meta charset="UTF-8">
-        <meta content="width=device-width"/>
+        <meta  name="viewport"content="width=device-width",initial-scale=1>
+        <meta name="keywords" content="footer"
         
         
         <link rel="stylesheet" href="t.css">
